# LLMComparison

./: .env.example  .gitignore  EXECUTION_GUIDE.md  GATING_REQUIREMENTS.md  MULTI_DATASET_ARCHITECTURE.md  README.md  REFACTORING_SUMMARY.md  SESSION_COMPLETION_REPORT.md  TEŞHIS_VE_ÇÖZÜM_TR.md  check_model_availability.py  demo.py  enable_nb.py  fix_nb.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test_model_fixes.py  update_nb.py
.tmp.driveupload/: 129  171
configs/: __init__.py  base_config.yaml
configs/experiment_configs/: grounding_experiment.yaml  rrg_experiment.yaml  vqa_experiment.yaml
configs/model_configs/: domain_adaptive.yaml  extra_track_api.yaml  extra_track_domain.yaml  extra_track_ocr.yaml  generalist.yaml  specialist.yaml
configs/prompts/: custom_prompts.yaml
envs/: README.md  base.yaml  dev.yaml  internvl.yaml  llama.yaml  medical.yaml  phi.yaml  qwen.yaml  specialist.yaml
experiments/: run_comparison.py  run_prompt_ablation.py
notebooks/: 00_colab_setup.ipynb  01_quick_start.ipynb  02_full_comparison.ipynb  03_model_comparison.ipynb  main_experiment.ipynb  output1.txt  paper_experiment.ipynb  run_full_experiment.ipynb
presets/: presets.yaml
results/: README.md
scripts/: download_datasets.sh  setup_models.sh
src/: __init__.py
src/backends/: base.py  transformers_backend.py
src/configs/: environment.py  model_taxonomy.py
src/data/: __init__.py  base_dataset.py  hf_iu_xray.py  hf_vqa_rad.py  iu_xray.py  mimic_cxr.py  ms_cxr.py  padchest.py  schema.py  slake.py  vindr_cxr.py  vqa_rad.py
src/evaluation/: __init__.py  base_evaluator.py  vqa_metrics.py
src/evaluation/clinical_metrics/: __init__.py  chexbert_f1.py  radgraph_f1.py
src/evaluation/grounding/: __init__.py  bbox_metrics.py
src/evaluation/hallucination/: __init__.py  factchexcker.py
src/evaluation/llm_judge/: __init__.py  green.py
src/evaluation/nlp_metrics/: __init__.py  bleu.py  rouge.py
src/models/: __init__.py  base_model.py
src/models/domain_adaptive/: __init__.py  biomedgpt.py  llava_med.py
src/models/generalist/: __init__.py  gemini.py  generic_vision_chat.py  gpt4v.py  internvl2.py  llama3.py  llava_next.py  minicpm_v.py  phi3_vision.py  qwen2_vl.py
src/models/specialist/: __init__.py  chexagent.py  llava_rad.py  radfm.py
src/utils/: __init__.py  logging.py  model_registry.py  model_registry_refactored.py  prompt_manager.py  rag.py  result_writer.py  statistical_tests.py
tests/: README.md  conftest.py  test_evaluation.py  test_models.py  test_registry.py
